# sai3-bench

./: .Cargo.toml.swp  .env  .gitignore  .markdownlint-cli2.yaml  4host-vast-64mfiles-with-barriers.yaml  Cargo.toml  README.md  build.rs  get_smoke.yaml  prepare-100k-1kb-4endpoint.yaml  quick-test-results.tsv  sai3-bench-dev.code-workspace  sai3-bench_error.txt  test_4_agents_4-paths.yaml  unet3d_1-host-get_gcs-rapid.yaml  warp-equivalent-put-4node-16endpoint.yaml
.github/: Handoff_v0.8.22.md  SESSION_HANDOFF.md  copilot-instructions.md  sai3-bench_multi-endpoint_HANDOFF.md
benches/: BUFFER_POOL_RESULTS.md  CHUNKED_READS_ANALYSIS.md  README.md  REAL_SAI3BENCH_VALIDATION.md  find_optimal_direct_io_block_size.sh  fs_read_bench.rs  test_buffer_improvements.sh  test_buffer_quick.sh  test_chunked_optimization.sh  test_chunked_vs_whole_file.sh  test_real_sai3bench_direct_vs_file.sh
docs/: AGENT_STATE_MACHINE.md  ANALYZE_TOOL.md  AZURE_SETUP.md  BARRIER_INTEGRATION_TEST_PLAN.md  BIDIRECTIONAL_STREAMING.md  CHANGELOG.md  CHUNKED_READS_IMPLEMENTATION.md  CHUNKED_READS_STRATEGY.md  CLOUD_STORAGE_SETUP.md  CONFIG.sample.yaml  CONFIG_CONVERTER.md  CONFIG_SYNTAX.md  CONTAINER_DEPLOYMENT_GUIDE.md  CONTROLLER_STATE_MACHINE.md  CREDENTIAL_FORWARDING.md  DATA_GENERATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_NOTES.md  DIRECTORY_STRUCTURE_DESIGN.md  DIRECTORY_TREE_GUIDE.md  DIRECTORY_TREE_SHARED_FILESYSTEM_DESIGN.md  DISTRIBUTED_BARRIER_SYNC_DESIGN.md  DISTRIBUTED_CLEANUP_DESIGN.md  DISTRIBUTED_LIVE_STATS_IMPLEMENTATION.md  DISTRIBUTED_TESTING_GUIDE.md  DOCKER_PRODUCTION_DEPLOYMENT.md  FILESYSTEM_TESTING_GUIDE.md  FILE_IO_PATTERNS_ANALYSIS.md  GCS_INTEGRATION.md  GCS_WORKER_HANG_INVESTIGATION_v0.8.71.md  HANDOFF_V0.8.26.md  HANDOFF_v0.8.24a.md  HANDOFF_v0.8.71.md  How-to-Put-1-Trillion_Objects.md  INTEGRATION_CONTEXT.md  IO_RATE_CONTROL_GUIDE.md  IO_SIZE_OPTIMIZATION.md  KV_CACHE_FLUSH_POLICY.md  LARGE_SCALE_TESTING_SUMMARY.md  LARGE_SCALE_TIMEOUT_ANALYSIS.md  (+62 more)
docs/archive/: BIDIRECTIONAL_STREAMING.md  BLOCKING_IO_FIXES_REQUIRED.md  BLOCK_IO_IMPLEMENTATION_PLAN.md  CHANGELOG_v0.1.0-v0.8.4.md  CHANGELOG_v0.8.5-v0.8.19.md  DATA_GENERATION_OPTIMIZATION.md  DIRECTORY_STRUCTURE_DESIGN.md  DIRECTORY_TREE_SHARED_FILESYSTEM_DESIGN.md  DISTRIBUTED_BARRIER_SYNC_DESIGN.md  DISTRIBUTED_CLEANUP_DESIGN.md  EXECUTION_ORDER_ANALYSIS.md  FILE_IO_PATTERNS_ANALYSIS.md  LARGE_SCALE_TESTING_SUMMARY.md  LARGE_SCALE_TIMEOUT_ANALYSIS.md  MULTI_ENDPOINT_ENHANCEMENT_PLAN.md  MULTI_ENDPOINT_IMPLEMENTATION_STATUS.md  MULTI_ENDPOINT_ROUTING_ANALYSIS.md  NETWORK_RESILIENCE_ANALYSIS.md  OPLOG_SORTING_CLARIFICATION.md  PREFLIGHT_VALIDATION_IMPLEMENTATION.md  PRIORITY_FIXES_v0.8.0.md  RDF_BENCH_FEATURE_COMPARISON.md  RDF_BENCH_REFERENCE.md  README.md  RELEASE_v0.7.0.md  RELEASE_v0.7.1.md  REPLAY_BACKPRESSURE_DESIGN.md  SCALE_OUT_VS_SCALE_UP.md  STATE_MACHINE_DESIGN_v0.8.0_detailed.md  STREAMING_LIST_IMPLEMENTATION_PLAN.md  TESTING_CLOCK_SYNC.md  TIMEOUT_FIX_IMPLEMENTATION.md  V0.6.4_MULTIHOST_SUMMARY.md  V0.6.4_TESTING_SUMMARY.md  V0.6.9_RELEASE_SUMMARY.md  V0.8.1_FUTURE_ENHANCEMENTS.md  rdf-bench-vs-sai3-bench-comparison.md
docs/planning/: BLOCK_STORAGE_ANALYSIS.md  DIRECTORY_TREE_SHARED_FILESYSTEM_DESIGN.md  FIX_HOT_PATH.md  (+6 more)
examples/: README.md  all-operations.yaml  analyze_usage.sh  cloud-storage-with-delay.yaml  debug_azure.rs  debug_store.rs  distributed-autotune-minimal.yaml  distributed-manual-containers.yaml  distributed-scale-out.yaml  distributed-scale-up.yaml  distributed-ssh-automated.yaml  mixed-workload-cloud.yaml  preflight_demo.rs  test_directory_structure.rs
proto/: iobench.proto  s3bench.proto
sai3-20251029-1727-metadata_simple/: config.yaml
sai3-20251029-1728-metadata_simple/: config.yaml  metadata.json  results.tsv
sai3-20251029-1729-metadata_simple/: config.yaml  metadata.json  results.tsv
sai3-20251029-1732-mkdir_put_race_test/: results.tsv
sai3-20251029-1735-mkdir_rmdir_race_test/: metadata.json  results.tsv
sai3-20251029-1736-rmdir_nonempty_test/: metadata.json  results.tsv
scripts/: QUICKSTART.md  README.md  cloud_test_template.sh  gcp_distributed_test.sh  local_docker_test.sh  setup_preflight_tests.sh  start_local_agents.sh  test_abort_mechanism.sh  test_abort_phases.sh  test_clock_sync.sh  test_ctrl_c_abort.sh  test_distributed_cleanup.sh  test_local_directory_detection.sh  validate_gcp_script.sh
src/: cleanup.rs  cloud_metadata.rs  config.rs  config_converter.rs  config_tests.rs  constants.rs  cpu_monitor.rs  data_gen_pool.rs  directory_tree.rs  fs_metadata.rs  lib.rs  live_stats.rs  main.rs  metadata_cache.rs  metadata_cache_blocking_io_tests.rs  metadata_ops.rs  metadata_prefetch.rs  metrics.rs  multiprocess.rs  multiruntime.rs  oplog_merge.rs  perf_log.rs  populate_ledger.rs  prepare.rs  rate_controller.rs  remap.rs  replay.rs  replay_streaming.rs  results_dir.rs  serde_helpers.rs  size_generator.rs  size_parser.rs  ssh_deploy.rs  ssh_setup.rs  tsv_export.rs  validation.rs  workload.rs
src/pb/: iobench.rs  (+1 more)
tests/: azure_tests.rs  barrier_agent_states.rs  barrier_timeout_tests.rs  directory_tree_creation_tests.rs  distributed_config_tests.rs  distributed_local_test.sh  distributed_simulation_test.rs  distributed_workload_test.sh  file_tests.rs  gcs_backend_test.sh  gcs_tests.rs  grpc_integration.rs  metadata_cache_integration_tests.rs  metadata_cache_prepare_integration.rs  multi_process_tests.rs  parallel_prepare_tests.rs  rate_control_tests.rs  s3_tests.rs  state_sync_tests.rs  store_cache_integration_test.rs  streaming_replay_tests.rs  streaming_replay_tests.sh  test_agent_client_id.sh  test_agent_preflight.rs  test_blocking_io_fixes.rs  test_cleanup_functionality.sh  test_comprehensive_v0.6.4.sh  test_coordinated_start.sh  test_cpu_monitoring.sh  test_distributed_cleanup.rs  test_distributed_cleanup.sh  test_distributed_prepare_cleanup.rs  test_distributed_results.sh  test_large_scale_timeouts.rs  test_multi_endpoint_verification.sh  test_page_cache_modes.sh  test_preflight_integration.rs  test_preflight_validation.rs  test_results_directory.sh  test_simple_prepare.rs  (+3 more)
(+191 files in other folders)
