[package]
name = "sai3-bench"
version = "0.5.5"
edition = "2024"
build   = "build.rs"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
hdrhistogram = "7.5"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "^2.5"

# s3dlio (main branch - latest version 0.8.19+)
s3dlio = { git = "https://github.com/russfellows/s3dlio.git", tag = "v0.8.20" }
s3dlio-oplog = { git = "https://github.com/russfellows/s3dlio.git", tag = "v0.8.20" }

# gRPC
tonic = { version = "0.13.1", features = ["transport", "codegen", "tls-webpki-roots"] }
tonic-build = "0.13.1"
prost = "^0.13"
rcgen = "^0.14"

# (optional) serialization for richer results later
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
rand = "0.9.2"
humantime-serde = "1.1.1"
rand_distr = "0.5.1"

# Progress bars
indicatif = "0.17"

# CSV parsing for op-log replay
csv = "1.3"
zstd = "0.13"

[build-dependencies]
tonic-build = "^0.13"
prost-build = "^0.13"

# existing main (single-node CLI) remains:
[[bin]]
name = "sai3-bench"
path = "src/main.rs"

# new agent (runs on each load-generator host)
[[bin]]
name = "sai3bench-agent"
path = "src/bin/agent.rs"

# new controller (coordinates benchmark across agents)
[[bin]]
name = "sai3bench-ctl"
path = "src/bin/controller.rs"

#New sai3bench-run cli, separate for now, plan to integrate into main
[[bin]]
name = "sai3bench-run"
path = "src/bin/run.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
