[package]
name = "sai3-bench"
version = "0.6.11"
edition = "2021"
build   = "build.rs"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
hdrhistogram = "7.5"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "^2.5"

# s3dlio (version 0.9.10 - object size pre-fetching for optimized GET performance)
s3dlio = { path = "../s3dlio" }
s3dlio-oplog = { path = "../s3dlio/crates/s3dlio-oplog" }

# gRPC
tonic = { version = "0.13.1", features = ["transport", "codegen", "tls-webpki-roots"] }
tonic-build = "0.13.1"
prost = "^0.13"
rcgen = "^0.14"

# (optional) serialization for richer results later
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1"
rand = "0.9.2"
humantime-serde = "1.1.1"
rand_distr = "0.5.1"
hostname = "0.4"

# Progress bars
indicatif = "0.17"

# CSV parsing for op-log replay
csv = "1.3"
zstd = "0.13"

[build-dependencies]
tonic-build = "^0.13"
prost-build = "^0.13"

# existing main (single-node CLI) remains:
[[bin]]
name = "sai3-bench"
path = "src/main.rs"

# new agent (runs on each load-generator host)
[[bin]]
name = "sai3bench-agent"
path = "src/bin/agent.rs"

# new controller (coordinates benchmark across agents)
[[bin]]
name = "sai3bench-ctl"
path = "src/bin/controller.rs"

# NOTE: Legacy binaries removed from production builds (v0.6.9+)
# - sai3bench-run: Replaced by "sai3-bench run" subcommand (more features) - source deleted
# - fs_read_bench: Internal dev tool for buffer pool testing - moved to benches/

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
serial_test = "3.2"
