[package]
name = "sai3-bench"
version = "0.8.52"
edition = "2021"
build   = "build.rs"

[dependencies]
# AWS SDK - aligned with s3dlio v0.9.38
aws-config = "=1.8.11"
aws-sdk-s3 = "=1.116.0"
anyhow = "^1"
base64 = "^0.22"
chrono = "^0.4"
clap = { version = "^4", features = ["derive"] }
dotenvy = "^0.15"
futures = "^0.3"
tokio-stream = "^0.1"  # v0.7.5: Stream trait for gRPC streaming
hdrhistogram = { version = "^7.5", features = ["serialization"] }
regex = "^1.11"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
url = "^2.5"
num_cpus = "^1.16"

# s3dlio: Use git tag for releases (switch to local path for development)
s3dlio = { git = "https://github.com/russfellows/s3dlio.git", tag = "v0.9.39" }
s3dlio-oplog = { git = "https://github.com/russfellows/s3dlio.git", tag = "v0.9.39" }

# gRPC (aligned with dl-driver)
tonic = { version = "^0.13.1", features = ["transport", "codegen", "tls-webpki-roots"] }
tonic-build = "^0.13.1"
prost = "^0.13"
rcgen = "^0.14"

# (optional) serialization for richer results later
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9.34"
serde_json = "^1.0"
rand = "^0.9"  # Aligned with s3dlio v0.9.38
humantime-serde = "^1.1.1"
humantime = "^2.2"
rand_distr = "^0.5.1"
hostname = "^0.4"
parking_lot = "^0.12" # v0.7.5: Fast Mutex for live_stats histograms
glob = "^0.3"          # v0.7.6: Pattern validation for startup handshake
num-format = "^0.4"    # v0.8.52: Thousand separator formatting for dry-run output

# Progress bars
indicatif = "^0.17"

# CSV parsing for op-log replay
csv = "^1.3"
zstd = "^0.13"

# SSH automation for distributed deployment (v0.6.11+)
ssh2 = "^0.9"
shellexpand = "^3.1"

# Metadata operations (v0.7.0+)
async-trait = "^0.1"
async-stream = "^0.3"  # v0.7.5: Server streaming for live stats
libc = "^0.2"
bytes = "^1.10"

# Pre-flight validation (v0.8.23+)
nix = { version = "^0.27", features = ["user", "fs"] }  # Unix permissions, mount detection
fs2 = "^0.4"              # Cross-platform disk space checks
sysinfo = "^0.30"         # System resource queries
reqwest = { version = "^0.11", features = ["json"] }  # Metadata service queries
users = "^0.11"           # Username/groupname lookup

# Results analysis (v0.8.17+)
rust_xlsxwriter = "^0.79"  # Excel file generation
walkdir = "^2"  # Directory traversal

[build-dependencies]
tonic-build = "^0.13"
prost-build = "^0.13"

# existing main (single-node CLI) remains:
[[bin]]
name = "sai3-bench"
path = "src/main.rs"

# new agent (runs on each load-generator host)
[[bin]]
name = "sai3bench-agent"
path = "src/bin/agent.rs"

# controller (coordinates benchmark across agents)
[[bin]]
name = "sai3bench-ctl"
path = "src/bin/controller.rs"

# results analyzer (consolidates multiple results into Excel)
[[bin]]
name = "sai3-analyze"
path = "src/bin/analyze.rs"

# NOTE: Legacy binaries removed from production builds (v0.6.9+)
# - sai3bench-run: Replaced by "sai3-bench run" subcommand (more features) - source deleted
# - fs_read_bench: Internal dev tool for buffer pool testing - moved to benches/

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.1"
tempfile = "^3.20"
bytes = "^1.10"
tokio = { version = "1", features = ["full"] }
serial_test = "3.2"
